// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preExec should return false when failed to start 1`] = `
Array [
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
]
`;

exports[`preExec should return false when failed to start 2`] = `
Array [
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
]
`;

exports[`preExec should return false when failing 1`] = `
Array [
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
]
`;

exports[`preExec should return false when timeouting 1`] = `
Array [
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
]
`;

exports[`preExec should return true when no preExecs 1`] = `
Array [
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
]
`;

exports[`preExec should return true when passing 1`] = `
Array [
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
]
`;

exports[`preExec should use cmd /C when running on windows 1`] = `
Array [
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "sh",
    Array [
      "-c",
      "npm install",
    ],
  ],
  Array [
    "cmd",
    Array [
      "/C",
      "npm install",
    ],
  ],
]
`;
